--- a/yd66clash.yaml
+++ b/yd66clash.yaml
@@ -5,67 +5,71 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 俄罗斯, server: 185.174.138.196, port: 2082, type: vmess, uuid: 3f638f34-8dba-4186-bc43-2716a7ddd4be, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: "/az05.beyondy.cfd/link?/TM@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1/?ed=2560", ws-headers: {Host: yellow-paper-029c.yvonna.workers.dev}, udp: true}
-  - {name: 美国, server: cloudflare.182682.xyz, port: 80, type: vmess, uuid: b9a3206d-278c-4614-b352-eef632d1c8d5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: "/rongseven?ed=2048", ws-headers: {Host: kr.cfyyds.filegear-sg.me}, udp: true}
-  - {name: 美国 2, server: 152.70.57.182, port: 443, type: vmess, uuid: e537f2f5-2a0c-4f59-92c9-832ca6433bf3, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /linkws, ws-headers: {Host: irvideo.cfd}, udp: true}
-  - {name: 荷兰, server: 45.158.171.146, port: 8080, type: ss, cipher: chacha20-ietf-poly1305, password: 4a2rfixophdjffa8KVA4Aa, udp: true}
-  - {name: 美国 3, server: 120.232.153.123, port: 45402, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, udp: true}
-  - {name: 俄罗斯 2, server: fr1.opensocks.site, port: 8388, type: ss, cipher: chacha20-ietf-poly1305, password: OTVlMzcy, udp: true}
-  - {name: 俄罗斯 3, server: 185.231.205.179, port: 8388, type: ss, cipher: chacha20-ietf-poly1305, password: OTVlMzcy, udp: true}
+  - {name: 美国, server: 120.232.153.123, port: 45402, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, udp: true}
+  - {name: 美国 2, server: cloudflare.182682.xyz, port: 80, type: vmess, uuid: b9a3206d-278c-4614-b352-eef632d1c8d5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: "/rongseven?ed=2048", ws-headers: {Host: kr.cfyyds.filegear-sg.me}, udp: true}
+  - {name: 英国, server: 78.129.140.11, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: Y3bjXCJbTPlRdyTqFAYGDZ, udp: true}
+  - {name: 德国, server: 52.57.173.145, port: 443, type: trojan, password: !<str> 3782591447421952000, skip-cert-verify: true, udp: true}
+  - {name: 美国 3, server: 188.253.22.10, port: 443, type: trojan, password: !<str> 3778399737045327872, skip-cert-verify: true, udp: true}
+  - {name: 德国 2, server: 193.122.58.158, port: 443, type: vmess, uuid: e537f2f5-2a0c-4f59-92c9-832ca6433bf3, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /linkws, ws-headers: {Host: irvideo.cfd}, udp: true}
   - {name: 乌克兰, server: 185.234.64.35, port: 8388, type: ss, cipher: chacha20-ietf-poly1305, password: YTNjNDY5, udp: true}
-  - {name: 俄罗斯 4, server: 92.243.75.49, port: 2087, type: trojan, password: wb6368, skip-cert-verify: true, udp: true}
+  - {name: 俄罗斯, server: 185.174.138.196, port: 2082, type: vmess, uuid: 3f638f34-8dba-4186-bc43-2716a7ddd4be, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: "/az05.beyondy.cfd/link?/TM@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1@AZARBAYJAB1/?ed=2560", ws-headers: {Host: yellow-paper-029c.yvonna.workers.dev}, udp: true}
   - {name: 日本, server: 103.116.7.103, port: 2083, type: trojan, password: wb6368, skip-cert-verify: true, udp: true}
+  - {name: 俄罗斯 2, server: 92.243.75.49, port: 2087, type: trojan, password: wb6368, skip-cert-verify: true, udp: true}
   - {name: 日本 2, server: arxfw2b78fi2q9hzylhn.freesocks.work, port: 443, type: ss, cipher: chacha20-ietf-poly1305, password: Nk9asglDzHzjktVzTkvhaA, udp: true}
+  - {name: 德国 3, server: 165.22.74.230, port: 443, type: trojan, password: 4732adfa16c6450bbef87264e41332db, skip-cert-verify: true, udp: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 俄罗斯
       - 美国
       - 美国 2
-      - 荷兰
+      - 英国
+      - 德国
       - 美国 3
-      - 俄罗斯 2
-      - 俄罗斯 3
+      - 德国 2
       - 乌克兰
-      - 俄罗斯 4
+      - 俄罗斯
       - 日本
+      - 俄罗斯 2
       - 日本 2
+      - 德国 3
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 俄罗斯
       - 美国
       - 美国 2
-      - 荷兰
+      - 英国
+      - 德国
       - 美国 3
-      - 俄罗斯 2
-      - 俄罗斯 3
+      - 德国 2
       - 乌克兰
-      - 俄罗斯 4
+      - 俄罗斯
       - 日本
+      - 俄罗斯 2
       - 日本 2
+      - 德国 3
   - name: 🎥 NETFLIX
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 俄罗斯
       - 美国
       - 美国 2
-      - 荷兰
+      - 英国
+      - 德国
       - 美国 3
-      - 俄罗斯 2
-      - 俄罗斯 3
+      - 德国 2
       - 乌克兰
-      - 俄罗斯 4
+      - 俄罗斯
       - 日本
+      - 俄罗斯 2
       - 日本 2
+      - 德国 3
   - name: ⛔️ 广告拦截
     type: select
     proxies:
@@ -84,17 +88,18 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 俄罗斯
       - 美国
       - 美国 2
-      - 荷兰
+      - 英国
+      - 德国
       - 美国 3
-      - 俄罗斯 2
-      - 俄罗斯 3
+      - 德国 2
       - 乌克兰
-      - 俄罗斯 4
+      - 俄罗斯
       - 日本
+      - 俄罗斯 2
       - 日本 2
+      - 德国 3
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -105,50 +110,53 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 俄罗斯
       - 美国
       - 美国 2
-      - 荷兰
+      - 英国
+      - 德国
       - 美国 3
-      - 俄罗斯 2
-      - 俄罗斯 3
+      - 德国 2
       - 乌克兰
-      - 俄罗斯 4
+      - 俄罗斯
       - 日本
+      - 俄罗斯 2
       - 日本 2
+      - 德国 3
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 俄罗斯
       - 美国
       - 美国 2
-      - 荷兰
+      - 英国
+      - 德国
       - 美国 3
-      - 俄罗斯 2
-      - 俄罗斯 3
+      - 德国 2
       - 乌克兰
-      - 俄罗斯 4
+      - 俄罗斯
       - 日本
+      - 俄罗斯 2
       - 日本 2
+      - 德国 3
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 俄罗斯
       - 美国
       - 美国 2
-      - 荷兰
+      - 英国
+      - 德国
       - 美国 3
-      - 俄罗斯 2
-      - 俄罗斯 3
+      - 德国 2
       - 乌克兰
-      - 俄罗斯 4
+      - 俄罗斯
       - 日本
+      - 俄罗斯 2
       - 日本 2
+      - 德国 3
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -164,17 +172,18 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 俄罗斯
       - 美国
       - 美国 2
-      - 荷兰
+      - 英国
+      - 德国
       - 美国 3
-      - 俄罗斯 2
-      - 俄罗斯 3
+      - 德国 2
       - 乌克兰
-      - 俄罗斯 4
+      - 俄罗斯
       - 日本
+      - 俄罗斯 2
       - 日本 2
+      - 德国 3
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
